<resources>
    <string name="app_name">Jook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="StreetCharErr">Error: Street name include number</string>
    <string name="StreetNumErr">Error: Street Num include char</string>
    <string name="CityCharErr">Error: City name include int</string>
    <string name="BookYearRangeErr">Year for book not in range</string>
    <string name="CustomerIdDigitErr">Customer ID contains only 9 numbers</string>
    <string name="DiscountPrecentRangeErr">Discount Percent must be between 0-100</string>
    <string name="PhoneCharErr">Error: Phone contains only numbers</string>
    <string name="PhoneLengthErr">Error: Phone length incorrect</string>
    <string name="PhonePrefixErr">Phone prefix not valid</string>
    <string name="cPhoneNumErr">Cell phone contains only numbers</string>
    <string name="cPhoneLengthErr">Cell phone length incorrect</string>
    <string name="cPhonePrefixErr">Error: phone prefix not valid</string>
    <string name="EmailRegularErr">Error: Email not valid</string>
    <string name="RecoomnedetionWorngID">Error: Wrong Id format for recommendation</string>
    <string name="RecommendetionIndexNegetivErr">Num Of Recommends most by positive</string>
    <string name="fNameNumErr">Error: First Name include num</string>
    <string name="lNameNumErr">Error: Last Name Include num</string>
    <string name="RegisterdMail">דואר רשום</string>
    <string name="RunerMail">דואר שליחים</string>
    <string name="UPS">יו.פי.אס</string>
    <string name="SelfPickUP">איסוף עצמי</string>
    <string name="SupplierBookSupIdErr">Error: Worng Supplier ID for supplier book</string>
    <string name="WorngAmuntForSupplierBookErr">Error: Supplier book - amount need to be more then one</string>
    <string name="WorngPriceForSupplierBookErr">price need to be positive</string>
    <string name="WorngUserIDErr">Error: User ID contains only 9 numbers</string>
    <string name="UserPasswordErr">password have only 8 letters</string>
    <string name="BookDupIDErr">Book with same id already exist!</string>
    <string name="BookNoSupErr">supplier not exist</string>
    <string name="BookNotFoundErr">Book not Found</string>
    <string name="SupBookDupRecordErr">supplier - book record already exist</string>
    <string name="SupBookNotFound">supplier - book record not Found</string>
    <string name="CusAlreadyExistErr">customer already exist</string>
    <string name="CusNotExistErr">customer not exist</string>
    <string name="SupplierAlreadyExistErr">Supplier already exist!</string>
    <string name="SupNotFoundErr">Supplier not found!!</string>
    <string name="AdminAlreadyExistErr">Admin already exist!!</string>
    <string name="AdminNotexistErr">Admin not exist!!</string>
    <string name="RecAlreadyExistErr">Recommendation already exist</string>
    <string name="RecNotExistErr">Recommendation not exist</string>
    <string name="CartAlreadyExistErr">Order Cart already exist!!</string>
    <string name="CartNotExistErr">Cart not exist!</string>
    <string name="OrderAlreadyExistErr">Order id already exist!</string>
    <string name="OrderNotExistErr">Order id not exist!</string>
    <string name="CartIdStartRunIfForList">JCSN-0</string>
    <string name="OrderIdStartRunIfForList">JOSN-0</string>
    <string name="title_activity_show_single_book">ShowSingleBook</string>
    <string name="loginUserText">דואר אלקטרוני</string>

    <string name="user">User </string>
    <string name="recomends">ממליץ</string>
    <string name="Payway">שיטת תשלום</string>
    <string name="cash">מזומן</string>
    <string name="Sign_as_customer">הרשם כלקוח</string>
    <string name="Sign_as_supplier">הרשם כספק</string>
    <string name="Cellphone">פלאפון</string>
    <string name="Phone">טלפון</string>
    <string name="phone_number">0000000000</string>
    <string name="mail">מייל</string>
    <string name="mail_example">israelisraeli@gmail.com</string>
    <string name="street">רחוב</string>
    <string name="number">מספר</string>
    <string name="address">כתובת</string>
    <string name="city">עיר</string>
    <string name="family_name">שם משפחה</string>
    <string name="example_family_name">ישראלי</string>
    <string name="private_name">שם פרטי</string>
    <string name="example_private_name">ישראל</string>
    <string name="id">תעודת זהות</string>
    <string name="example_id">000000000</string>
    <string name="title_activity_new_customer">newCustomerActivity</string>
    <string name="sign_in">הרשמה</string>
    <string name="user_name">שם משתמש</string>
    <string name="password">סיסמא</string>
    <string name="title_activity_new_supplier">newSupplierActivity</string>
    <string name="busiName">שם העסק</string>
    <string name="deliveryWay">שיטת משלוח</string>
    <string name="title_activity_add_book">AddBookActivity</string>
    <string name="writer">מחבר</string>
    <string name="Publisher">הוצאה לאור</string>
    <string name="PublishYear">שנת הוצאה</string>
    <string name="yearExample">1948</string>
    <string name="category">קטגוריה</string>
    <string name="customer_payway_choose">בחר אמצעי תשלום...</string>
    <string name="binding">כריכה</string>
    <string name="title_activity_show_all_books_in_category">ShowAllBooksInCategory</string>

    <string name="bookName">שם הספר</string>
    <string name="addBook">הוסף ספר</string>
    <string name="title_activity_recomendation">recomendation</string>
    <string name="amount">כמות</string>
    <string name="one">1</string>
    <string name="thick">עבה</string>
    <string name="title_activity_supplier_recomendation">SupplierRecomendation</string>
    <string name="rate">דירוג</string>
    <string name="content">תוכן:</string>
    <string name="addRecommendation">הוסף המלצה</string>
    <string name="addAdmin">רשום אדמינסטרטור</string>
    <string name="title_activity_new_admin">newAdminActivity</string>
    <string name="permission">הרשאה</string>
    <string name="addADMIN">הוסף מנהל</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="RecoomnededNotFound">Error: Recommended not found</string>
    <string name="as_administrator">רישום כמנהל</string>
    <string name="cost">מחיר</string>
    <string name="insertURL">הכנס כתובת תמונה</string>
    <string name="URL">כתובת תמונה</string>
    <string name="bookID">מסת\'\'ב</string>
    <string name="title_activity_show_book_main">הצגת ספר</string>
    <string name="title_activity_show__recommends__for__book">Show_Recommends_For_Book</string>
    <string name="sup_name">שם הספק</string>
    <string name="pricePerOne">מחיר ליחידה</string>
    <string name="forPay">מחיר כולל</string>
    <string name="title_activity_cart">עגלה</string>
    <string name="title_activity_stock">Stock</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="makeInvite">בצע הזמנה</string>
    <string name="cartNumber">מספר עגלה</string>
    <string name="numOfInvites">מספר הזמנות</string>
    <string name="totalPrice">לתשלום</string>

    <string name="title_activity_load_data">LoadData</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="guestError">יש להתחבר כדי להזמין</string>


</resources>
