<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.jook.AddUser"
    >

    <LinearLayout
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <EditText android:id="@+id/get_user_id"
            android:inputType="number"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/example_id"
            android:maxLength="9"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"  />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/private_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_below="@id/id">
        <EditText  android:id="@+id/get_user_private_name"
            android:inputType="text"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/example_private_name"
            />
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/private_name"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/family_name"
        android:layout_below="@id/private_name"
        >

        <EditText android:id="@+id/get_user_family_name"
            android:inputType="text"
            android:layout_weight="2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/example_family_name"
            />
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family_name"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/address"
        android:layout_below="@id/family_name"
        >

        <EditText android:id="@+id/get_user_city"
            android:inputType="text"
            android:layout_weight="1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/address2"
        android:layout_below="@id/address"
        >

        <EditText android:id="@+id/get_user_building"
            android:inputType="number"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            />

        <EditText android:id="@+id/get_user_street"
            android:layout_weight="9"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/street"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/mail"
        android:layout_below="@id/address2"
        >

        <EditText android:id="@+id/get_mail"
            android:layout_weight="4"
            android:inputType="text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/mail_example"
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/phone"
        android:layout_below="@id/mail"
        >

        <EditText android:id="@+id/get_user_phone_number"
            android:inputType="phone"
            android:layout_weight="1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Phone"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/cellphone"
        android:layout_below="@id/phone"
        >

        <EditText android:id="@+id/get_user_cellphone_number"
            android:layout_weight="1"
            android:inputType="phone"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cellphone"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/options"
        android:layout_below="@id/cellphone"
        >

        <Button android:id="@+id/user_is_suplier"
            android:layout_weight="1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Sign_as_supplier"
            android:visibility="visible"
            android:onClick="RegAsSupButton"
            />

        <Button android:id="@+id/user_is_customer"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sign_as_customer"
            android:visibility="visible"
            android:onClick="RegAsCusButton"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cellphone"
        android:id="@+id/add_admin"
        android:visibility="gone">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/addAdmin"
            android:onClick="RegAsAdmin"

            />
    </LinearLayout>

</RelativeLayout>
