<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="65dp"
    android:background="@drawable/list_view_bg_selector"
    android:orientation="horizontal"
    android:layoutDirection="rtl"
    android:paddingTop="7dp"
    android:paddingRight="7dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookName"
            android:textColor="#040404"
            android:typeface="sans"
            android:textSize="25dip"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/supplier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sup_name"
            android:textSize="15dip"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="15dip"/>
        <TextView
            android:id="@+id/book_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textColor="#040404"
            android:typeface="sans"
            android:textSize="20dip"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pricePerOne"
            android:textSize="15dip"/>
        <TextView
            android:id="@+id/book_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textColor="#040404"
            android:typeface="sans"
            android:textSize="20dip"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forPay"
            android:textSize="15dip"/>
        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textColor="#040404"
            android:typeface="sans"
            android:textSize="20dip"
            android:textStyle="bold"/>

    </LinearLayout>



    <!-- Rightend Arrow -->
    <ImageView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_weight="1"/>

</LinearLayout>
