<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.jook.Add_Customer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/cus_payway"
        android:visibility="visible">

        <Spinner android:id="@+id/get_customer_payway"
            android:inputType="text"
            android:layout_weight="1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/payway_array"
            android:prompt="@string/customer_payway_choose"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Payway"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/recomended"
        android:layout_below="@id/cus_payway"
        android:visibility="visible"
        >

        <EditText android:id="@+id/get_customer_recomended"
            android:layout_weight="1"
            android:inputType="text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text=""
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recomends"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/user_password"
        android:layout_below="@id/recomended"
        android:visibility="visible"
        >

        <EditText android:id="@+id/get_user_password"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text=""
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/cus_sign"
        android:layout_below="@id/user_password"
        android:visibility="visible"
        >

        <Button android:id="@+id/customer_sign_in"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:onClick="CreateCustomer"             />


    </LinearLayout>

</RelativeLayout>
